Ajout de la librairie circleimageview pour avoir des images "rondes"

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
 //    compile 'org.apache.commons:commons-collections4:4.0'
     compile 'org.apache.commons:commons-lang3:3.4'
 //    compile 'commons-io:commons-io:2.4'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
 }
