Ajout de PostActivity, qui s'ouvre lorsqu'on clique sur un post dans la home

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity
             android:name=".RecoverPasswordActivity"
             android:label="@string/title_activity_recover_password" />
+        <activity android:name=".PostActivity"></activity>
     </application>
 
 </manifest>
