--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,15 +31,15 @@
         </activity>
         <activity
             android:name=".HomeActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_home_activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".CreateProfileWizardActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_create_profile_activity"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".PostActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_post_activity"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -48,7 +48,7 @@
         </activity>
         <activity
             android:name=".CreatePostActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_create_post_activity"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -57,14 +57,22 @@
         </activity>
         <activity
             android:name=".ProfileActivity"
-            android:label="@string/app_name"
+            android:label="@string/title_profile_activity"
             android:parentActivityName=".HomeActivity"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomeActivity" />
         </activity>
-        <activity android:name=".CreateAccount"></activity>
+        <activity android:name=".CreateAccount" />
+        <activity
+            android:name=".FollowersActivity"
+            android:label="@string/title_followers_activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".InboxActivity"
+            android:label="@string/title_inbox_activity"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
