Ajout de zipAlignEnabled true pour la génération de l'APK de prod

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,10 +15,12 @@ android {
         debug {
             buildConfigField "Boolean", "DEBUG_MODE", "true"
         }
+
         release {
             buildConfigField "Boolean", "DEBUG_MODE", "false"
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            zipAlignEnabled true
         }
     }
 
